--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ntn-boilerplate",
+  "name": "jhutchcraft.com",
   "version": "1.0.0",
-  "description": "Nuxt-Tailwind-NetlifyCMS boilerplate",
-  "author": "Sven Parker <sven@svenparker.com> (https://svenparker.com)",
+  "description": "Personal website of Jeremy Hutchcraft",
+  "author": "Jeremy Hutchcraft (https://jhutchcraft.com",
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
